# applymate---exp

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFERENCE.md  ROADMAP.md  docker-compose.yml  git-setup.ps1  git-setup.sh  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  settings.py
core/: __init__.py
core/browser/: __init__.py  form_filler.py  page_analyzer.py  playwright_manager.py
core/nlp/: __init__.py  field_matcher.py  resume_parser.py
core/services/: __init__.py  application_service.py  auth_service.py  profile_service.py
database/: __init__.py  db_manager.py  models.py
storage/: __init__.py
ui/: __init__.py  app.py
ui/pages/: __init__.py  dashboard.py  new_application.py  profile_manager.py
utils/: __init__.py  helpers.py  logger.py  validators.py
